# TuiWeather

./: Cargo.toml  LICENSE  README.md
src/: app.rs  downloading.rs  error.rs  getting_location.rs  getting_weather.rs  main.rs  ui.rs
test_resources/: cities.csv
