[package]
name = "TuiWeather"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "Simple Tui app for showing weather"
repository = "https://github.com/Detalexpl/TuiWeather"

[dependencies]
directories = "6.0.0"
serde = {version = "1.0.228", features = ["derive"]}
reqwest = {version = "0.13.2",features = ["json"]}
tokio = {version = "1.49.0",features = ["full"]}
csv = "1.4.0"