[package]
name = "TuiWeather"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Simple Tui app for showing weather"
authors = ["Detalex<frazeb09@gmail.com>"]
repository = "https://github.com/Detalexpl/TuiWeather"

[dependencies]
battery = "0.7.8"
directories = "6.0.0"
serde = {version = "1.0.228", features = ["derive"]}
reqwest = { version = "0.13.2", default-features = false, features = ["native-tls", "json"] }
tokio = {version = "1.49.0",features = ["full"]}
csv = "1.4.0"
ratatui = {version = "0.30.0",features = ["crossterm"]}
crossterm = "0.29.0"
chrono = "0.4.44"